--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<html><body><h1>Hello</h1></body></html>
+<html>
+  <head>
+    <title>Docker Shell</title>
+  </head>
+  <body>
+    <h1>Docker Shell</h1>
+    <img src="images/logo.svg" alt=""/>
+  </body>
+</html>
