--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
     <pre>dsh --volumes-from my-data-container -- ls /my-data-container</pre>
     <p>Look in the catalog /my-data-container provided by my-data-container 
     (assuming this is exported by my-data-container).</p>
+    <h2>Feedback</h2>
+    <p>If you have any feedback, just write me an email at <a
+    href="mailto:michael@zedeler.dk">michael@zedeler.dk</a>.</p>
   </body>
 </html>
