Added two more features on the feature list.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       <dt>Persistent workspace</dt>
       <dd>Docker Shell sets up a persistent workspace stored inside a data
       container.</dd>
+      <dt>Run docker commands from inside docker</dt>
+      <dd>Docker Shell will automatically detect how to communicate with the
+      docker daemon and make it possible to run any docker command from
+      inside Docker Shell.</dd>
+      <dt>Ssh key propagation</dt>
+      <dd>Use the ssh key from your host inside Docker Shell.</dd>
       <dt>Experiment with new tools</dt>
       <dd>Setting up extra tools inside Docker Shell is easy - only commit
       the changes that you're satisfied with.</dd>
