--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
 <html>
   <head>
     <title>Docker Shell: cross platform orchestration</title>
+    <style>
+body {
+    font-family: sans-serif;
+    max-width: 90em;
+}
+
+dt {
+    margin-left: 1em;
+    font-weight: bold;
+}
+
+dd {
+    margin-left: 1em;
+    padding-bottom: 1em;
+}
+
+pre {
+    border: 1px solid black;
+    padding: 0.5em 1em;
+    line-height: 1.5em;
+    /* display: block; */
+    max-width: 80em;
+    background-color: lightgrey;
+    overflow-x: auto;
+}
+    </style>
   </head>
   <body>
     <img src="images/logo.svg" alt="Docker Shell"/>
