--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@ pre {
       <dd>Access to the workspace using SMB is supported.</dd>
     </dl>
     <h2>Getting started</h2>
-    <pre>
-      git clone git@github.com:Solfisk/dsh
-      dsh/dsh
-    </pre>
+    <pre>git clone git@github.com:Solfisk/dsh
+dsh/dsh</pre>
     <p>You need to have permission to execute docker run.</p>
     <h2>Parameters</h2>
     <p>The synopsis for dsh is:</p>
