--- a/index.html
+++ b/index.html
@@ -43,12 +43,22 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 </script>
   </head>
   <body>
-    <img src="images/logo.svg" alt="Docker Shell"/>
-    <h1>Cross platform orchestration</h1>
+    <header>
+      <img src="images/logo.svg" alt="Docker Shell"/>
+      <h1>Cross platform orchestration</h1>
+    </header>
+    <nav>
+      <a href="#features">Features</a>
+      <a href="#getting-started">Getting started</a>
+      <a href="#parameters">Parameters</a>
+      <a href="#examples">Examples</a>
+      <a href="#feedback">Feedback</a>
+    </nav>
+    <section>
     <p>Docker Shell lets you set up a development or staging environment
     inside a Docker container, which makes it relatively painless to use
     identical environments on many different platforms.</p>
-    <h2>Features</h2>
+    <a name="features"><h2>Features</h2></a>
     <dl>
       <dt>Persistent workspace</dt>
       <dd>Docker Shell sets up a persistent workspace stored inside a data
@@ -65,7 +75,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       <dt>Built in SMB support</dt>
       <dd>Access to the workspace using SMB is supported.</dd>
     </dl>
-    <h2>Getting started</h2>
+    <a name="getting-started"><h2>Getting started</h2></a>
     <pre>git clone git@github.com:Solfisk/dsh
 dsh/dsh</pre>
     <p>You need to have permission to execute docker run.</p>
@@ -87,15 +97,20 @@ dsh/dsh</pre>
     </dl>
     <p>Anything after two trailing dashes will be run as a command (and its
     parameters inside Docker Shell upon startup.</p>
-    <h2>Examples</h2>
+    <a name="examples"><h2>Examples</h2></a>
     <pre>dsh -v ~/Downloads/assets:/tmp/assets -- rsync /tmp/downloads /workspace/my-project/assets</pre>
     <p>Synchronize ~/Downloads/assets to my-project inside the
     workspace.</p>
     <pre>dsh --volumes-from my-data-container -- ls /my-data-container</pre>
     <p>Look in the catalog /my-data-container provided by my-data-container 
     (assuming this is exported by my-data-container).</p>
-    <h2>Feedback</h2>
+    <a name="feedback"><h2>Feedback</h2></a>
     <p>If you have any feedback, just write me an email at <a
     href="mailto:michael@zedeler.dk">michael@zedeler.dk</a>.</p>
+    </section>
+    <footer>
+    <h1>Docker Shell - Copyright 2015</h1>
+    <a href="http://github.com/Solfisk/dsh">Github project</a>
+    </footer>
   </body>
 </html>
